    adding, editing, copying and deleting the selected table entry
  - Groovy updated to 1.8.2
  - Maven build: update to groovy-eclipse-compiler 2.5.2 which
    - adds support for Eclipse 3.7.1
    - adds support for Java 7
    - needs less custom configuration in pom.xml
  - added Windows icon for custom launcher configurations (st-logo.ico)
  - XMLStorageTest: cleanup of temporary files after test run 
  - README: documentation for device support of W Kalenji 300 and CW Kalenji 
    700 (when using http://code.google.com/p/kalenji-gps-watch-reader/)

 Translations:
  - updated spanish and basque translations by Asier Urio Larrea
    <asieriko@gmail.com>
   
v5.3.0:
 ExerciseViewer changes:
  - SF Bug #3203396: TopoGrafixGpxParser: parse GPX files with missing 
    timestamps in track metadata
  - update to Guice 3.0 (final)
  - Weight dialog: when adding new entries, initialize it with weight
    from previous entry
  - update to BSAF 1.9.2 (contains many bugfixes, comes now from the
    central Maven repository)
  - Groovy updated to 1.8.0
  - Maven build: use of groovy-eclipse-compiler for mixed Java/Groovy 
    compilation (GMaven is outdated for Groovy 1.8.0 and m2e)
    => ST project can't be opened in Eclipse 3.7, there are problems with
       the recent m2e and Groovy-Eclipse plugins
  - EasyMock updated to version 3.0 (performs class mocking directly)
  - tested SportsTracker with Java 7, no problems

v5.2.0:
 SportsTracker changes:
  - added IntelliJ IDEA project files to Mercurial ignore list 
    (IDEA can now also be used for development)
  - update to BSAF 1.9 GA (final), which contains many bugfixes, also for the 
    Command+Q-Shutdown problem on MacOS X
  - update to JUnit 4.8.2
  - update to Guice 3.0 (RC2)
    - use of standardized javax.inject annotations (JSR 330) for Dependency 
      Injection (so the DI Container could be easily exchanged)
    - Guice API is only used for DI Container setup
  - Groovy updated to version 1.7.6